--- a/film.html
+++ b/film.html
@@ -126,6 +126,10 @@
   letter-spacing: 0.5px;
   vertical-align: middle;
 }
+  .film-meta .imdb-badge {
+  background: #f5c518 !important;
+  color: #000 !important;
+}
 .tg-banner {
   display: flex;
   align-items: center;
