--- a/film.html
+++ b/film.html
@@ -134,32 +134,33 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  width: 100%;
-  background: linear-gradient(90deg,#0a0a0a 0%,#111 100%);
-  border: 1px solid rgba(0,255,255,0.2);
-  border-radius: 12px;
-  padding: 12px 16px;
+  gap: 8px;
+  width: 95%;
+  background: #0d0d0d;
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  border-radius: 10px;
+  padding: 10px 14px;
   color: #00fff2;
   text-decoration: none;
-  font-weight: 600;
-  font-size: 15px;
-  margin-bottom: 16px;
-  box-shadow: 0 0 15px rgba(0,255,255,0.15);
-  transition: all .25s ease;
+  font-weight: 500;
+  font-size: 13.5px;
+  margin: 0 auto 12px auto; /* по центру і з відступом */
+  box-shadow: none;
+  transition: none;
 }
 
 .tg-banner:hover {
-  background: linear-gradient(90deg,#00fff226 0%,#00fff20e 100%);
-  box-shadow: 0 0 22px rgba(0,255,255,0.3);
-  transform: translateY(-1px);
+  background: #0d0d0d; /* без змін при наведенні */
+  transform: none;
+  box-shadow: none;
 }
 
 .tg-icon {
-  width: 22px;
-  height: 22px;
-  filter: invert(68%) sepia(99%) saturate(900%) hue-rotate(120deg);
+  width: 18px;
+  height: 18px;
+  filter: invert(58%) sepia(82%) saturate(610%) hue-rotate(138deg) brightness(97%) contrast(97%);
 }
+
 
     
   </style>
