--- a/film.html
+++ b/film.html
@@ -133,7 +133,7 @@
 .tg-banner {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 8px;
   width: 95%;
   background: #0d0d0d;
