--- a/film.html
+++ b/film.html
@@ -161,6 +161,90 @@
   filter: invert(58%) sepia(82%) saturate(610%) hue-rotate(138deg) brightness(97%) contrast(97%);
 }
 
+.report-btn {
+  background: transparent;
+  border: none;
+  color: #ff6b2b;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+  float: right;
+  margin-top: -34px; /* піднімає кнопку на рівень із Фільм / Трейлер */
+  transition: color 0.2s ease;
+}
+
+.report-btn:hover {
+  color: #ffa066;
+  text-decoration: underline;
+}
+/* --- модальне вікно --- */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.75);
+}
+
+.modal-content {
+  background: #121212;
+  color: #e0e0e0;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}
+
+.modal-content h3 {
+  margin-top: 0;
+  color: #ff6b2b;
+}
+
+.modal-content textarea {
+  width: 100%;
+  background: #1b1b1b;
+  border: 1px solid #444;
+  color: #fff;
+  border-radius: 6px;
+  padding: 8px;
+  resize: none;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 12px;
+}
+
+.modal-buttons button {
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.modal-buttons .cancel {
+  background: #333;
+  color: #ccc;
+}
+
+.modal-buttons .send {
+  background: #ff6b2b;
+  color: #fff;
+}
+
+.close-modal {
+  float: right;
+  font-size: 22px;
+  cursor: pointer;
+  color: #777;
+}
+.close-modal:hover { color: #fff; }
 
     
   </style>
@@ -279,6 +363,8 @@
           <button id="btnMovie" class="active">🎬 Фільм</button>
           <button id="btnTrailer">🎞️ Трейлер</button>
         </div>
+        <!-- 🟠 Кнопка для скарги -->
+        <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
 
         <div class="player-box">
   <div class="player-wrapper" style="position:relative;">
@@ -564,5 +650,48 @@ function getYouTubeId(url) {
     // Завантаження сторінки
     loadFilm();
   </script>
+<!-- 🧾 Модальне вікно -->
+<div id="reportModal" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <h3>Надіслати повідомлення адміну</h3>
+    <p>Опиши коротко, що не працює або яка виникла помилка:</p>
+    <textarea id="reportText" rows="4" placeholder="Напиши тут..."></textarea>
+    <div class="modal-buttons">
+      <button id="cancelReport" class="cancel">Скасувати</button>
+      <button id="sendReport" class="send">Надіслати</button>
+    </div>
+  </div>
+</div>
+<script>
+const modal = document.getElementById("reportModal");
+const reportBtn = document.getElementById("reportBtn");
+const closeBtn = document.querySelector(".close-modal");
+const cancelBtn = document.getElementById("cancelReport");
+const sendBtn = document.getElementById("sendReport");
+const textArea = document.getElementById("reportText");
+
+// Відкрити
+reportBtn.onclick = () => {
+  modal.style.display = "block";
+  textArea.value = "";
+};
+
+// Закрити
+closeBtn.onclick = () => modal.style.display = "none";
+cancelBtn.onclick = () => modal.style.display = "none";
+
+// Надіслати (поки просто закриває, можна пізніше підключити Telegram API або email)
+sendBtn.onclick = () => {
+  alert("Повідомлення надіслано адміну!");
+  modal.style.display = "none";
+};
+
+// Закриття по кліку поза вікном
+window.onclick = (e) => {
+  if (e.target == modal) modal.style.display = "none";
+};
+</script>
+
 </body>
 </html>
