--- a/film.html
+++ b/film.html
@@ -252,7 +252,13 @@
   border: 1px solid rgba(255,255,255,0.06);
   border-radius: 12px;
   padding: 16px;
+  max-width: 880px;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
 }
+
 
 .comments-section h3 {
   color: #00fff2;
