--- a/film.html
+++ b/film.html
@@ -252,12 +252,17 @@
   border: 1px solid rgba(255,255,255,0.06);
   border-radius: 12px;
   padding: 16px;
-  max-width: 880px;
+
+  /* 🔹 вирівнювання точно як у плеєра */
   width: 95%;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 880px;
+  margin: 22px auto 0 auto;
   box-sizing: border-box;
+
+  /* 🔹 невелика тінь, щоб виглядав як продовження плеєра */
+  box-shadow: 0 0 18px rgba(0,0,0,0.4);
 }
+
 
 
 .comments-section h3 {
