--- a/film.html
+++ b/film.html
@@ -252,13 +252,16 @@
   border: 1px solid rgba(255,255,255,0.06);
   border-radius: 12px;
   padding: 16px;
-  width: 95%;
-  max-width: 880px;
+
+  /* 🔹 вирівнюємо з описом */
+  width: calc(100% - 20px);
+  margin-left: 20px;
+
+  /* прибираємо центрування */
+  margin-right: 0;
+  max-width: none;
   box-sizing: border-box;
-  margin-left: 2px;  /* вирівнює з плеєром */
 }
-
-
 
 
 .comments-section h3 {
