--- a/film.html
+++ b/film.html
@@ -252,16 +252,17 @@
   border: 1px solid rgba(255,255,255,0.06);
   border-radius: 12px;
   padding: 16px;
-
-  /* 🔹 вирівнюємо з описом */
-  width: calc(100% - 20px);
-  margin-left: 20px;
-
-  /* прибираємо центрування */
-  margin-right: 0;
-  max-width: none;
+  
+  /* 🔹 розташування всередині правої колонки */
+  width: 100%;
+  max-width: 100%;
   box-sizing: border-box;
+
+  /* 🔹 прибираємо будь-яке центрування */
+  margin-left: 0;
+  margin-right: 0;
 }
+
 
 
 .comments-section h3 {
