--- a/film.html
+++ b/film.html
@@ -473,32 +473,26 @@
 
 
         <div class="film-description">
-          <h3>Про що фільм:</h3>
-          <p id="filmDesc">Опис фільму...</p>
+          <div class="film-description">
+        <h3>Про що фільм:</h3>
+        <p id="filmDesc">Опис фільму...</p>
+      </div>
+
+      <!-- 💬 Коментарі -->
+      <div class="comments-section">
+        <h3>💬 Коментарі</h3>
+
+        <div id="commentsList"></div>
+
+        <div class="comment-form">
+          <input type="text" id="username" placeholder="Ваше ім’я (необов’язково)">
+          <textarea id="commentText" placeholder="Напишіть свій коментар..." rows="3"></textarea>
+          <button id="sendComment">Надіслати</button>
         </div>
       </div>
     </div>
-  </main>
-  <div class="film-right">
-  <div class="film-title" id="filmTitle"></div>
-  <div class="film-desc" id="filmDesc"></div>
-
-  <!-- 💬 Коментарі -->
-  <div class="comments-section">
-    <h3>💬 Коментарі</h3>
-
-    <!-- список коментарів -->
-    <div id="commentsList"></div>
-
-    <!-- форма -->
-    <div class="comment-form">
-      <input type="text" id="username" placeholder="Ваше ім’я (необов’язково)">
-      <textarea id="commentText" placeholder="Напишіть свій коментар..." rows="3"></textarea>
-      <button id="sendComment">Надіслати</button>
-    </div>
   </div>
-</div>
-
+</main>
 
   <footer>© 2025 KinoSite • Усі права захищені</footer>
 
