--- a/film.html
+++ b/film.html
@@ -882,78 +882,69 @@ window.onclick = (e) => {
 };
 </script>
 <script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+<script>
+  // Використовуємо вже створений клієнт supabase
+  const filmId = new URLSearchParams(window.location.search).get("id");
+  const commentsList = document.getElementById("commentsList");
+  const sendBtn = document.getElementById("sendComment");
 
-const supabaseUrl = 'https://zerlqvbmqszomlondlte.supabase.co';   // 🔹 заміни на свою адресу
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";                      // 🔹 встав свій anon ключ
-const supabase = createClient(supabaseUrl, supabaseKey);
+  // 💬 Завантаження коментарів
+  async function loadComments() {
+    commentsList.innerHTML = "<p style='color:#777'>Завантаження...</p>";
 
-// Отримуємо ID фільму з URL (наприклад ?id=5)
-const filmId = new URLSearchParams(window.location.search).get("id");
+    const { data, error } = await supabase
+      .from('comments')
+      .select('*')
+      .eq('film_id', filmId)
+      .order('created_at', { ascending: false });
 
-// HTML елементи
-const commentsList = document.getElementById("commentsList");
-const sendBtn = document.getElementById("sendComment");
+    if (error) {
+      console.error("Помилка коментарів:", error);
+      commentsList.innerHTML = "<p style='color:#c66'>Не вдалося завантажити коментарі</p>";
+      return;
+    }
 
-// ===== 📥 ЗАВАНТАЖИТИ КОМЕНТАРІ =====
-async function loadComments() {
-  commentsList.innerHTML = "<p style='color:#777'>Завантаження...</p>";
+    commentsList.innerHTML = "";
+    if (!data || data.length === 0) {
+      commentsList.innerHTML = "<p style='color:#888'>Ще немає коментарів. Будь першим!</p>";
+      return;
+    }
 
-  const { data, error } = await supabase
-    .from('comments')
-    .select('*')
-    .eq('film_id', filmId)
-    .order('created_at', { ascending: false });
-
-  if (error) {
-    console.error("Помилка завантаження:", error);
-    commentsList.innerHTML = "<p style='color:#c66'>Не вдалося завантажити коментарі 😕</p>";
-    return;
+    data.forEach(c => {
+      const div = document.createElement("div");
+      div.className = "comment";
+      div.innerHTML = `
+        <strong>${c.username || "Анонім"}</strong>
+        <p>${c.text}</p>
+        <small>${new Date(c.created_at).toLocaleString()}</small>
+      `;
+      commentsList.appendChild(div);
+    });
   }
 
-  if (!data || data.length === 0) {
-    commentsList.innerHTML = "<p style='color:#888'>Ще немає коментарів. Будь першим!</p>";
-    return;
-  }
+  // 💬 Надіслати коментар
+  sendBtn.addEventListener("click", async () => {
+    const username = document.getElementById("username").value.trim() || "Анонім";
+    const text = document.getElementById("commentText").value.trim();
 
-  // очищуємо і додаємо
-  commentsList.innerHTML = "";
-  for (const c of data) {
-    const div = document.createElement("div");
-    div.className = "comment";
-    div.innerHTML = `
-      <strong>${c.username || "Анонім"}</strong>
-      <p>${c.text}</p>
-      <small>${new Date(c.created_at).toLocaleString()}</small>
-    `;
-    commentsList.appendChild(div);
-  }
-}
+    if (!text) return alert("Введи коментар 🙂");
 
-// ===== 📤 НАДІСЛАТИ КОМЕНТАР =====
-sendBtn.addEventListener("click", async () => {
-  const username = document.getElementById("username").value.trim() || "Анонім";
-  const text = document.getElementById("commentText").value.trim();
+    const { error } = await supabase
+      .from('comments')
+      .insert([{ film_id: filmId, username, text }]);
 
-  if (!text) return alert("Введи коментар 🙂");
+    if (error) {
+      alert("Помилка при надсиланні 😕");
+      console.error(error);
+    } else {
+      document.getElementById("commentText").value = "";
+      loadComments();
+    }
+  });
 
-  // вставляємо в базу
-  const { error } = await supabase
-    .from('comments')
-    .insert([{ film_id: filmId, username, text }]);
-
-  if (error) {
-    console.error("Помилка надсилання:", error);
-    alert("Не вдалося надіслати 😕");
-  } else {
-    document.getElementById("commentText").value = "";
-    loadComments(); // оновити список
-  }
-});
-
-// Запускаємо завантаження при відкритті сторінки
-loadComments();
+  loadComments();
 </script>
+
 
 </body>
 </html>
