--- a/index.html
+++ b/index.html
@@ -49,31 +49,23 @@
           </div>
         </div>
       </div>
-      <div class="dropdown">
+<!-- === МЕНЮ "СЕРІАЛИ" === -->
+<div class="dropdown">
   <a href="#" class="menu-series">Серіали</a>
   <div class="mega-menu mega-series">
     <div class="genres">
-      <a href="#">Біографія</a>
-      <a href="#">Бойовик</a>
-      <a href="#">Вестерн</a>
-      <a href="#">Воєнний</a>
-      <a href="#">Детектив</a>
-      <a href="#">Документальний</a>
-      <a href="#">Драма</a>
-      <a href="#">Історія</a>
-      <a href="#">Комедія</a>
-      <a href="#">Кримінал</a>
-      <a href="#">Мелодрама</a>
-      <a href="#">Містика</a>
-      <a href="#">Пригоди</a>
-      <a href="#">Спорт</a>
-      <a href="#">Трилер</a>
-      <a href="#">Жахи</a>
-      <a href="#">Фантастика</a>
-      <a href="#">Фентезі</a>
-      <a href="#">Дорама</a>
-      <a href="#">Субтитри</a>
-      <a href="#">Міні-серіал</a>
+      <a href="#">Мелодраматичні</a>
+      <a href="#">Детективні</a>
+      <a href="#">Драматичні</a>
+      <a href="#">Комедійні</a>
+      <a href="#">Історичні</a>
+      <a href="#">Фантастичні</a>
+      <a href="#">Турецькі</a>
+      <a href="#">Пригодницькі</a>
+      <a href="#">Трилери (серіали)</a>
+      <a href="#">Жахи (серіали)</a>
+      <a href="#">Дорами</a>
+      <a href="#">Міні серіали</a>
     </div>
   </div>
 </div>
@@ -323,6 +315,7 @@
 
 </body>
 </html>
+
 
 
 
