--- a/header.html
+++ b/header.html
@@ -5,37 +5,37 @@
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       <a href="#" class="active">Головна</a>
 
-      <!-- Кнопка Фільми з випадаючим меню -->
-      <div class="dropdown">
-        <a href="#" class="menu-films">Фільми</a>
-        <div class="mega-menu">
-          <div class="genres">
-            <a href="#">Біографія</a>
-            <a href="#">Бойовик</a>
-            <a href="#">Вестерн</a>
-            <a href="#">Військовий</a>
-            <a href="#">Детектив</a>
-            <a href="#">Документальний</a>
-            <a href="#">Драма</a>
-            <a href="#">Історія</a>
-            <a href="#">Комедія</a>
-            <a href="#">Кримінал</a>
-            <a href="#">Мелодрама</a>
-            <a href="#">Містика</a>
-            <a href="#">Музика</a>
-            <a href="#">Мюзикл</a>
-            <a href="#">Пригоди</a>
-            <a href="#">Сімейний</a>
-            <a href="#">Спорт</a>
-            <a href="#">Трилер</a>
-            <a href="#">Жахи</a>
-            <a href="#">Фантастика</a>
-            <a href="#">Фентезі</a>
-            <a href="#">Короткометражні</a>
-            
-          </div>
-        </div>
-      </div>
+     <!-- Кнопка Фільми з випадаючим меню -->
+<div class="dropdown">
+  <a href="#" class="menu-films">Фільми</a>
+  <div class="mega-menu">
+    <div class="genres">
+      <a href="#" class="genre-link" data-genre="Біографія">Біографія</a>
+      <a href="#" class="genre-link" data-genre="Бойовик">Бойовик</a>
+      <a href="#" class="genre-link" data-genre="Вестерн">Вестерн</a>
+      <a href="#" class="genre-link" data-genre="Військовий">Військовий</a>
+      <a href="#" class="genre-link" data-genre="Детектив">Детектив</a>
+      <a href="#" class="genre-link" data-genre="Документальний">Документальний</a>
+      <a href="#" class="genre-link" data-genre="Драма">Драма</a>
+      <a href="#" class="genre-link" data-genre="Історія">Історія</a>
+      <a href="#" class="genre-link" data-genre="Комедія">Комедія</a>
+      <a href="#" class="genre-link" data-genre="Кримінал">Кримінал</a>
+      <a href="#" class="genre-link" data-genre="Мелодрама">Мелодрама</a>
+      <a href="#" class="genre-link" data-genre="Містика">Містика</a>
+      <a href="#" class="genre-link" data-genre="Музика">Музика</a>
+      <a href="#" class="genre-link" data-genre="Мюзикл">Мюзикл</a>
+      <a href="#" class="genre-link" data-genre="Пригоди">Пригоди</a>
+      <a href="#" class="genre-link" data-genre="Сімейний">Сімейний</a>
+      <a href="#" class="genre-link" data-genre="Спорт">Спорт</a>
+      <a href="#" class="genre-link" data-genre="Трилер">Трилер</a>
+      <a href="#" class="genre-link" data-genre="Жахи">Жахи</a>
+      <a href="#" class="genre-link" data-genre="Фантастика">Фантастика</a>
+      <a href="#" class="genre-link" data-genre="Фентезі">Фентезі</a>
+      <a href="#" class="genre-link" data-genre="Короткометражні">Короткометражні</a>
+    </div>
+  </div>
+</div>
+
 <!-- === МЕНЮ "СЕРІАЛИ" === -->
 <div class="dropdown">
   <a href="#" class="menu-series">Серіали</a>
