--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
     <div class="block">
       <h2>Останні надходження</h2>
     </div>
+    <div id="films-list" class="film-grid"></div>
+
 
     <div class="film-grid">
       <div class="film"><div class="poster"><img src="https://i.postimg.cc/5Nt4b6rP/film1.jpg"><span class="badge plus">+2</span><span class="badge quality">1080p</span></div><div class="title">Хороший хлопчик</div></div>
@@ -228,10 +230,65 @@
 
   loadFilms();
 </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
+const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
+const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+async function loadFilms(genre = null) {
+  let query = supabase.from("films_site").select("*").eq("type", "Фільм");
+  if (genre) query = query.eq("genre", genre);
+
+  const { data, error } = await query;
+  if (error) {
+    console.error("Помилка запиту:", error);
+    return;
+  }
+
+  const container = document.getElementById("films-list");
+  container.innerHTML = "";
+
+  if (!data.length) {
+    container.innerHTML = `<p style="color:#fff;">Фільмів не знайдено.</p>`;
+    return;
+  }
+
+  data.forEach(film => {
+    const card = document.createElement("div");
+    card.classList.add("film");
+    card.innerHTML = `
+      <div class="poster">
+        <img src="${film.poster}" alt="${film.title}">
+        ${film.pro_access?.toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
+      </div>
+      <div class="title">${film.title}</div>
+      <div class="meta">${film.genre} • ${film.year}</div>
+    `;
+    card.addEventListener("click", () => {
+      window.location.href = \`film.html?id=\${film.id}\`;
+    });
+    container.appendChild(card);
+  });
+}
+
+// 🔹 При завантаженні показати всі фільми
+loadFilms();
+
+// 🔹 Обробка кліків на жанри
+document.addEventListener("click", e => {
+  if (e.target.classList.contains("genre-link")) {
+    e.preventDefault();
+    const genre = e.target.dataset.genre;
+    loadFilms(genre);
+  }
+});
+</script>
 
 
 </body>
 </html>
+
 
 
 
